# Image-Resizing-using-STB

./: CMakeLists.txt  README.md
src/: resize_image.c
